# known-knowledge

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
app/: Cargo.toml
app/src/: lib.rs  main.rs  route_utils.rs  routes.rs
app/src/route_utils/: app_errors.rs
app/src/routes/: exercise.rs  explanation.rs  hello.rs  idea_atomic_update.rs  idea_create.rs  idea_delete.rs  idea_partial_update.rs  idea_retrieve.rs  ideas_list.rs
app/src/routes/exercise/: exercise_create.rs
app/src/routes/explanation/: explanation_create.rs
common/: Cargo.toml
common/src/: lib.rs  transfer_structs.rs
database/: init.sql
entity/: Cargo.toml
entity/src/: card.rs  exercise.rs  exerciseable.rs  exerciseable_external.rs  exerciseable_notecard.rs  explainable.rs  explainable_external.rs  explainable_markdown.rs  explanation.rs  idea.rs  lib.rs  post.rs  prelude.rs  sea_orm_active_enums.rs  usr.rs
migration/: Cargo.toml
migration/src/: iden.rs  lib.rs  m20230301_011111_create_usr_table.rs  m20230302_071301_create_idea_table.rs  m20230304_062227_populate_ideas.rs  m20230311_084888_create_explanation_types.rs  m20230311_085935_create_idea_explanation_table.rs  m20230311_172014_create_exercise_type.rs  m20230311_173221_create_exercise_table.rs  m20230318_094506_create_exercise_notecard_table.rs  m20230505_055305_populate_user.rs  main.rs
src/: ideas.json  lib.rs  main.rs  route_utils.rs  routes.rs
src/database/: idea.rs  mod.rs  prelude.rs
src/route_utils/: app_errors.rs
src/routes/: atomic_update_idea.rs  create_idea.rs  delete_idea.rs  get_idea.rs  idea_atomic_update.rs  idea_create.rs  idea_partial_update.rs  ideas_list.rs  list_ideas.rs  retrieve_idea.rs
