[package]
name = "knownknowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers"] }
tokio = { version = "1.25.0", features = ["full"] }

sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
