[package]
name = "app"
version = "0.1.0"
authors = ["Marlon Mueller-Soppart <marloni@duck.com>"]
edition = "2021"
publish = false

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
common = { path = "../common" }

axum = { version = "0.6.4", features = ["headers"] }
tokio = { version = "1.25.0", features = ["full"] }

sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
