[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.0", features = ["v4", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
