[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }

async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde_json = "1.0.93"

[dependencies.sea-orm-migration]
version = "0.11.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
