[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["trace"] }

async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde_json = "1.0.93"

[dependencies.sea-orm-migration]
version = "0.11.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
